# appian_databricks_document_ingestion

./: README.md
document_ingest_poc/: .gitignore  README.md  databricks.yml  pyproject.toml
document_ingest_poc/resources/: document_extract_text.yml  document_ingest.job.yml  document_ingest_poc_etl.pipeline.yml  document_ingest_poc_etl.yml  queries.yml  sample_job.job.yml
document_ingest_poc/src/: agentic_application_dev.ipynb  gen_ai_solution_dev.ipynb  sample_notebook.ipynb  vector_index_setup.ipynb  vector_index_setup_databricks.ipynb
document_ingest_poc/src/ai_pipelines/: gen_ai_solution_dev.ipynb
document_ingest_poc/src/document_ingest_poc/: document_content_extraction.ipynb  main.py
document_ingest_poc/src/document_ingest_poc_etl/: README.md
document_ingest_poc/src/document_ingest_poc_etl/transformations/: document_array_text.py  document_content_transform.py  raw_document_ingest.py  sample_trips_document_ingest_poc.py  sample_zones_document_ingest_poc.py
document_ingest_poc/src/document_transformations_gold/transformations/: document_array_text.py
document_ingest_poc/src/document_transformations_silver/: document_content_extraction.ipynb
document_ingest_poc/tests/: sample_taxis_test.py
document_ingest_terra/: .gitignore  .terraform.lock.hcl  catalogs.tf  checkpoints.tf  schemas.tf  service_principal.tf  terraform.tfstate  terraform.tfstate.backup  variables.tf  volumes.tf
