[project]
name = "document_ingest_poc"
version = "0.0.1"
authors = [{ name = "robertjustinianpeng@gmail.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "chonkie[all]"
]

[dependency-groups]
dev = [
    "pytest",
    "databricks-dlt",
    "databricks-connect>=15.4,<15.5",
]

[project.scripts]
main = "document_ingest_poc.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 125
